--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,7 @@ dependencies:
   persistent_bottom_nav_bar: ^4.0.2
   expansion_tile_card: ^1.1.0
   flutter_launcher_icons: ^0.9.2
-  riverpod: ^0.14.0+3
-  hooks_riverpod: ^0.14.0+5
+
 
 
 
@@ -59,6 +58,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
+    - assets/pose_detection_home.png
     - assets/Chest.png.png
     - assets/Back.png
     - assets/Bicep.png
@@ -67,11 +68,12 @@ flutter:
     - assets/Legs.png
     - assets/Abs.png
     - assets/Forearms.png
-    - assets/Advance.png
-    - assets/Intermidiate.jpg
-    - assets/Beginners.png
-    - assets/Advance_resize.png
-    - assets/Advance_upgraded.png
+    - assets/home/
+#    - assets/Advance.png
+#    - assets/Intermidiate.jpg
+#    - assets/Beginners.png
+#    - assets/Advance_resize.png
+#    - assets/Advance_upgraded.png
 
 
 
